footer repair center alignment on smal devices

--- a/index.css
+++ b/index.css
@@ -74,6 +74,10 @@ body{
     margin-bottom: 12px;
     padding-bottom: 12px;
  }
+ /* footer */
+ .footer-action{
+    align-items: flex-end;
+ }
  @media screen and (max-width:800px){
     .navbar{
     max-width: 100vw;
@@ -85,19 +89,31 @@ body{
     .nav a {
     color:rgb(180, 180, 180)  
     }
-} 
- @media screen and (max-width:800px){
-.section {
+
+    .section {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
-}
-.why_sections .online{
+    }
+    .why_sections .online{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    }
    
+    .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    }
+    /* .footer-action{
+       flex: 1; 
+       min-width: 180px; 
+       display: flex;
+       flex-direction: column; 
+       gap: 1rem;
+    } */
    
 } 
